z-index bug

--- a/src/pages_imports/Header.css
+++ b/src/pages_imports/Header.css
@@ -27,6 +27,7 @@ img {
 
 ul {
   min-width: 100%;
+  z-index: 999;
 }
 
 header a, header button, header li {
